2015-11-13  Andris Pavenis  <andris.pavenis@iki.fi>

	* gcc.c (POST_LINK_SPEC): Define if not already defined.
	(LINK_COMMAND_SPEC): Use post_link.
	(post_link_spec): New, initialize to POST_LINK_SPEC.
	(post_link): Initialize new static spec.
	* doc/tm.texi.in (POST_LINK_SPEC): Document.
	* doc/tm.texi: Regenerated.

2015-11-13  David Malcolm  <dmalcolm@redhat.com>

	PR driver/67613
	* Makefile.in (GCC_OBJS): Add spellcheck.o.
	(OBJS): Add spellcheck-tree.o.
	* gcc.c: Include "spellcheck.h".
	(suggest_option): New function.
	(driver::handle_unrecognized_options): Call suggest_option to
	provide a hint about misspelled options.
	* spellcheck.c: Update file comment.
	(levenshtein_distance): Convert 4-param implementation from static
	to extern scope.  Remove note about unit tests from leading
	comment for const char * implementation.  Move tree
	implementation to...
	* spellcheck-tree.c: New file.
	* spellcheck.h (levenshtein_distance):  Add 4-param decl.

2015-11-13  David Malcolm  <dmalcolm@redhat.com>

	* Makefile.in (OBJS): Add spellcheck.o.
	* spellcheck.c: New file.
	* spellcheck.h: New file.

2015-11-13  James Bowman  <james.bowman@ftdichip.com>

        * config/ft32/ft32.md (*sne): New insn pattern.

2015-11-12  Brad Lucier  <lucier@math.purdue.edu>

	* gcc/cprop.c (is_too_expensive): Remove.
	(gcse.h): Include.
	(one_cprop_pass): Call gcse_or_cprop_is_too_expensive, not
	is_too_expensive.
	* gcc/gcse.h (gcse_or_cprop_is_too_expensive): Declare.
	* gcc/gcse.c (is_too_expensive): Rename to ...
	(gcse_or_cprop_is_too_expensive): ... this.
	Expand warning to add required size of max-gcse-memory.
	(one_pre_gcse_pass): Use it.
	(one_code_hoisting_pass): Use it.
 	* gcc/params.def (max-gcse-memory): Increase from 50MB to 128MB.

2015-11-12  James Norris  <jnorris@codesourcery.com>
	    Joseph Myers  <joseph@codesourcery.com>

	* gimple-pretty-print.c (dump_gimple_omp_target): Handle
	GF_OMP_TARGET_KIND_OACC_DECLARE. 