@@ -1,3 +1,7 @@
+2015-11-13  Ilya Enkovich  <enkovich.gnu@gmail.com>
+
+	* g++.dg/vect/simd-mask-store-bool.cc: New test.
+
 2015-11-13  David Malcolm  <dmalcolm@redhat.com>
 
 	PR driver/67613
